
- Bug #532646: The object set to the __call__ attribute has its own __call__
  attribute checked; this continues until the attribute can no longer be found
  or segfaulting.  Recursion limit is now followed.

- Bug #1454485: Don't crash on Unicode characters <0.

- Patch #1488312, Fix memory alignment problem on SPARC in unicode

Extension Modules
-----------------

- Change binascii.hexlify() to accept any read-only buffer and not just a char
  buffer.

- Fixed a potentially invalid memory access of CJKCodecs' shift-jis decoder.

- Calling Tk_Init twice is refused if the first call failed as that
  may deadlock.

- Patch #1191065: Fix preprocessor problems on systems where recvfrom
  is a macro.

- Bug #1467952: os.listdir() now correctly raises an error if readdir()
  fails with an error condition.

- Fix bsddb.db.DBError derived exceptions so they can be unpickled.

- Bug #1117761: bsddb.*open() no longer raises an exception when using
  the cachesize parameter.

- Bug #1493322: bsddb: the __len__ method of a DB object has been fixed to
  return correct results.  It could previously incorrectly return 0 in some
  cases.  Fixes SF bug 1493322 (pybsddb bug 1184012).


Library
-------

- Bug #1117556: SimpleHTTPServer now tries to find and use the system's
  mime.types file for determining MIME types.

- Bug #1339007: Shelf objects now don't raise an exception in their
  __del__ method when initialization failed.

- Bug #1501223: Possible overflow in _PySys_Init() when reading the code page
  under Windows.

- Patch #1478292. ``doctest.register_optionflag(name)`` shouldn't create a
  new flag when ``name`` is already the name of an option flag.

- Bug #1473760: ``tempfile.TemporaryFile()`` could hang on Windows, when
  called from a thread spawned as a side effect of importing a module.

- The ``__del__`` method of class ``local`` in module ``_threading_local``
  returned before accomplishing any of its intended cleanup.
